# MagicSquarePerf

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: main.cpp
src/impls/: BaseImpl.h  NullReferenceImpl.cpp  NullReferenceImpl.h
src/impls/mine/single_cmp/: single_cmp.cpp  single_cmp.h
src/impls/mine/string_tree/: string_tree.cpp  string_tree.h
src/impls/theirs/central_5/: central_5.cpp  central_5.h
src/impls/theirs/comp_uint64/: comp_uint64.cpp  comp_uint64.h
src/impls/theirs/direct/: direct.cpp  direct.h
src/impls/theirs/no_shifts/: no_shifts.cpp  no_shifts.h
src/impls/theirs/odd_cached/: odd_cached.cpp  odd_cached.h
src/impls/theirs/oddity_heuristic/: oddity_heuristic.cpp  oddity_heuristic.h
src/impls/theirs/pre_cached/: pre_cached.cpp  pre_cached.h
